--- a/fliutter_aps/san_chat/pubspec.yaml
+++ b/fliutter_aps/san_chat/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
  flutter_screenutil: ^5.9.3
  flutter_bloc: ^9.1.1
  flutter_svg: ^2.2.1
+ firebase_core: ^4.1.1
+ firebase_auth: ^6.1.0
 
 dev_dependencies:
  flutter_test:
