--- a/fliutter_aps/san_chat/pubspec.yaml
+++ b/fliutter_aps/san_chat/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
  firebase_core: ^4.1.1
  firebase_auth: ^6.1.0
  auto_size_text: ^3.0.0
+ google_sign_in: ^7.2.0
 
 dev_dependencies:
  flutter_test:
