--- a/fliutter_aps/san_chat/pubspec.yaml
+++ b/fliutter_aps/san_chat/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
  firebase_auth: ^6.1.0
  auto_size_text: ^3.0.0
  google_sign_in: ^7.2.0
+ firebase_database: ^12.0.2
 
 dev_dependencies:
  flutter_test:
