--- a/fliutter_aps/route_guide/pubspec.yaml
+++ b/fliutter_aps/route_guide/pubspec.yaml
@@ -41,11 +41,12 @@ dependencies:
  flutter_screenutil: ^5.9.3
  geolocator: ^14.0.2
  get_it: ^8.2.0
- google_maps_flutter: ^2.13.1
- google_polyline_algorithm: ^3.1.0
+ #  google_maps_flutter: ^2.13.1
+ #  google_polyline_algorithm: ^3.1.0
  permission_handler: ^12.0.1
  rx_shared_preferences: ^4.0.0
  rxdart: ^0.28.0
+ go_router: ^16.2.4
 
 dev_dependencies:
  flutter_test:
